--- a/BLAZAMEmailMessage/Email/Base/EmailHeader.razor
+++ b/BLAZAMEmailMessage/Email/Base/EmailHeader.razor
@@ -1,27 +1,6 @@
-<!--[if (mso)|(IE)]>
-    <table width="100%" cellpadding="0" cellspacing="0" border="0">
-        <tr>
-            <td align="center" style="background-color: #2d3131;">
-            <![endif]-->
-<div class="u-row-container" style="padding: 0px;background-image: url('images/image-8.png');background-repeat: no-repeat;background-position: center top;background-color: transparent">
-    <div class="u-row" style="Margin: 0 auto;min-width: 320px;max-width: 800px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: transparent;">
-        <div style="border-collapse: collapse;display: table;width: 100%;height: 100%; background-color:#001529; color:white;">
-            <!--[if (mso)|(IE)]>
-            <table width="100%" cellpadding="0" cellspacing="0" border="0">
-               <tr>
-                  <td style="padding: 0px;background-image: url('images/image-8.png');background-repeat: no-repeat;background-position: center top;background-color: transparent;" align="center">
-                     <table cellpadding="0" cellspacing="0" border="0" style="width:600px;">
-                        <tr style="background-color: transparent;">
-                           <![endif]-->
+
+<MudStack Row=true
+          Style="background-color:#2261d3">
             <EmailHeaderIcon />
             <EmailHeaderText />
-            <!--[if (mso)|(IE)]>
-                        </tr>
-                     </table>
-                  </td>
-               </tr>
-            </table>
-            <![endif]-->
-        </div>
-    </div>
-</div>
+</MudStack>
