--- a/BLAZAMEmailMessage/_Imports.razor
+++ b/BLAZAMEmailMessage/_Imports.razor
@@ -1,3 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using BLAZAM.EmailMessage.Email.Base
 @using BLAZAM.Database.Context;
+@using MudBlazor
+@using BlazorTemplater;
+@using BLAZAM.Common.Data;
+
