--- a/BLAZAMGui/UI/AppModalContent.razor
+++ b/BLAZAMGui/UI/AppModalContent.razor
@@ -11,7 +11,7 @@
     /// </summary>
     protected void Close()
     {
-        Modal.Hide();
+        Modal.Close();
         InvokeAsync(StateHasChanged);
 
     }
