--- a/BLAZAMEmailMessage/Email/Base/EmailFooter.razor
+++ b/BLAZAMEmailMessage/Email/Base/EmailFooter.razor
@@ -1,43 +1,4 @@
-<div class="u-row-container" style="padding: 0px;background-color: transparent">
-    <div class="u-row" style="Margin: 0 auto;min-width: 320px;max-width: 800px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: transparent;">
-        <div style="border-collapse: collapse;display: table;width: 100%;height: 100%;background-color: transparent;">
-            <!--[if (mso)|(IE)]>
-            <table width="100%" cellpadding="0" cellspacing="0" border="0">
-               <tr>
-                  <td style="padding: 0px;background-color: transparent;" align="center">
-                     <table cellpadding="0" cellspacing="0" border="0" style="width:800px;">
-                        <tr style="background-color: transparent;">
-                           <![endif]-->
-            <!--[if (mso)|(IE)]>
-            <td align="center" width="800" class="v-col-padding v-col-background-color v-col-border" style="width: 800px;padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;border-radius: 0px;-webkit-border-radius: 0px; -moz-border-radius: 0px;" valign="top">
-               <![endif]-->
-            <div class="u-col u-col-100" style="max-width: 320px;min-width: 800px;display: table-cell;vertical-align: top;">
-                <div class="v-col-background-color" style="height: 100%;width: 100% !important;border-radius: 0px;-webkit-border-radius: 0px; -moz-border-radius: 0px;">
-                    <!--[if (!mso)&(!IE)]><!-->
-                    <div class="v-col-padding v-col-border" style="box-sizing: border-box; height: 100%; padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;border-radius: 0px;-webkit-border-radius: 0px; -moz-border-radius: 0px;">
-                        <!--<![endif]-->
-                        <EmailHorizontalLineBreak />
-                        <EmailSiteNavigation />
-                        <!--[if (!mso)&(!IE)]><!-->
-                    </div>
-                    <!--<![endif]-->
-                </div>
-            </div>
-            <!--[if (mso)|(IE)]>
-            </td>
-            <![endif]-->
-            <!--[if (mso)|(IE)]>
-                        </tr>
-                     </table>
-                  </td>
-               </tr>
-            </table>
-            <![endif]-->
-        </div>
-    </div>
-</div>
-            <!--[if (mso)|(IE)]>
-        </td>
-    </tr>
-</table>
-<![endif]-->
+
+<EmailHorizontalLineBreak />
+@* <EmailSiteNavigation /> *@
+
