--- a/BLAZAMEmailMessage/Email/Base/EmailTemplateHeader.razor
+++ b/BLAZAMEmailMessage/Email/Base/EmailTemplateHeader.razor
@@ -1,9 +1,10 @@
 <table id="u_content_heading_5" style="font-family:'Open Sans',sans-serif;" role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0">
     <tbody>
         <tr>
-            <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:60px 30px 5px;font-family:'Open Sans',sans-serif;" align="left">
-                <h1 class="v-color v-text-align v-font-size" style="margin: 0px; color: #081885; line-height: 110%; text-align: center; word-wrap: break-word; font-family: Oswald; font-size: 30px; ">
-                    @ChildContent
+            <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:60px 30px 5px;" align="left">
+                <h1 class="v-color v-text-align v-font-size" style="margin: 25px; color: #2261d3; line-height: 110%; text-align: center; word-wrap: break-word; font-size: 30px; ">
+
+                            @ChildContent
                 </h1>
             </td>
         </tr>
