--- a/BLAZAMGui/UI/Settings/Permissions/PermissionMapEditor.razor
+++ b/BLAZAMGui/UI/Settings/Permissions/PermissionMapEditor.razor
@@ -93,9 +93,7 @@
         await base.OnInitializedAsync();
 
         await RefreshData();
-        LoadingData = false;
 
-        await InvokeAsync(StateHasChanged);
     }
 
     async Task RefreshData()
@@ -130,13 +128,19 @@
 
                     selectedAccessLevelNames = concatenatd;
                     concatenatd = "";
-                    Map.PermissionDelegates.Select(
-                         a => Directory.FindEntryBySID(a.DelegateSid).CanonicalName)
-                         .ToList().ForEach(s =>
-                         {
-                             concatenatd += s + ", ";
-
-                         });
+                    var sids = Map.PermissionDelegates.Select(a => a.DelegateSid).ToList();
+                    foreach(var sid in sids)
+                    {
+                        try
+                        {
+                            concatenatd += Directory.FindEntryBySID(sid) + ", ";
+                        }
+                        catch (Exception ex)
+                        {
+                            concatenatd += sid.ToSidString()+", ";
+                        }
+                    }
+                   
                     if (concatenatd != "")
                         concatenatd = concatenatd.Substring(0, concatenatd.Length - 2);
 
@@ -146,6 +150,7 @@
 
         }
         LoadingData = false;
+        await InvokeAsync(StateHasChanged);
 
     }
     async Task DeleteMapping()
