--- a/BLAZAM/Pages/Configure/Fields.razor
+++ b/BLAZAM/Pages/Configure/Fields.razor
@@ -127,10 +127,14 @@
         {
             foreach (var field in ADFields)
             {
-                for (int x=0; x < field.ObjectTypes.Count;x++)
+
+                for (int x = 0; x < field.ObjectTypes.Count; x++)
                 {
-                    var trackedObjType = Context.ActiveDirectoryFieldObjectMappings.First(x => x.Id == field.Id);
-                    field.ObjectTypes[x] = trackedObjType;
+                    var trackedObjType = Context.ActiveDirectoryFieldObjectMappings.FirstOrDefault(oType => oType.ObjectType == field.ObjectTypes[x].ObjectType);
+                    if (trackedObjType != null)
+                    {
+                        field.ObjectTypes[x] = trackedObjType;
+                    }
                 }
             }
             if (await Context.SaveChangesAsync() > 0)
