--- a/BLAZAMGui/UI/Settings/UpdateSettings.razor
+++ b/BLAZAMGui/UI/Settings/UpdateSettings.razor
@@ -86,7 +86,9 @@
 
                     <SettingsField Label="@AppLocalization["Password"]">
 
-                        <MudTextField Label="@AppLocalization["Password"]" InputType="InputType.Password" @bind-Value="newUpdatePassword" />
+                        <MudTextField Label="@AppLocalization["Password"]"
+                                      InputType="InputType.Password"
+                                      @bind-Value="newUpdatePassword" />
                     </SettingsField>
                 </MudCard>
             }
@@ -95,7 +97,9 @@
         </SettingsField>
         <SettingsField Label="@AppLocalization["Update Branch"]">
 
-            <MudSelect Label="@AppLocalization["Update Branch"]" @bind-Value=@settings.UpdateBranch HelperText="The stable branch is the recommended branch. Choosing Nightly is only recommended for test installations. Dev is only for developers.">
+            <MudSelect Label="@AppLocalization["Update Branch"]"
+                       @bind-Value=@settings.UpdateBranch
+                       HelperText="The rerlease branch is the recommended branch. Choosing Nightly is only recommended for test installations. Dev is only for developers.">
                 @foreach (var val in updateBranches)
                 {
                     <MudSelectItem Value="@val">@val</MudSelectItem>
